# clouds-decoded

./: .dockerignore  .gitignore  ARCHITECTURE.md  CODEBASE_ANALYSIS.md  DEVLOG.md  IMPLEMENTATION_PLAN.md  IMPORT_AUDIT.md  LICENSE  README.md  TODO.md  check_model_source.py  config.yaml  debug_import.py  docker-compose.yml  dockerfile  environment.yml  mkdocs.yml  producer.py  pyproject.toml  requirements.txt  scratch_profile_band_cache.py
demo/: explore_sample_dataset.ipynb
docs/: architecture.md  cli-reference.md  configuration.md  data-classes.md  index.md  installation.md  projects.md
docs/api/: albedo.md  cloud-height-emulator.md  cloud-height.md  cloud-mask.md  config-albedo.md  config-cloud-height-emulator.md  config-cloud-height.md  config-cloud-mask.md  config-refl2prop.md  config-refocus.md  config.md  constants.md  data-band.md  data-base.md  data-cloud-height.md  data-cloud-mask.md  data-refl2prop.md  data-sentinel.md  index.md  normalization.md  project.md  refl2prop.md  refocus.md  sliding-window.md  stats.md
docs/examples/: albedo_estimator_default.yaml  cloud_height_default.yaml  refl2prop_default.yaml
docs/templates/python/material/: pydantic_model.html.jinja
eval/: DEV-Cloud-Height-Validation.ipynb
fast_project/configs/: cloud_height.yaml
mynewproject/configs/: refl2prop.yaml
projects/test_project/configs/: cloud_height.yaml
sandbox/: demo.ipynb
src/: config.py  constants.py  data.py  defaults.py  main.py
src/cli/: entry.py
src/modules/albedo-estimator/: __init__.py  processor.py
src/modules/albedo_estimator/: __init__.py  config.py  processor.py  pyproject.toml  sampling.py
src/modules/albedo_estimator/datadriven/: __init__.py  config.py  dataset.py  model.py  processor.py  sampler.py  train.py
src/modules/cloud-height/: .gitignore  config.py  config.yaml  constants.py  data.py  defaults.py  dockerfile  physics.py  processor.py  pyproject.toml  worker.py
src/modules/cloud-height/eval/: DEV-Cloud-Height-Validation.ipynb
src/modules/cloud-height/src/: data.py
src/modules/cloud-mask/: processor.py
src/modules/cloud_height/: __init__.py  config.py  data.py  environment.yml  physics.py  processor.py  run_swarm_jobs.sh
src/modules/cloud_height_emulator/: __init__.py  config.py  processor.py  resunet.py
src/modules/cloud_mask/: __init__.py  config.py  processor.py
src/modules/refl2prop/: UNCERTAINTY_README.md  __init__.py  config.py  config.yaml  dataset.py  dataset_shading.py  example.py  loss.py  loss_shading.py  model.pth  model.py  model_shading.py  processor.py  pyproject.toml  setup.py  train.py  train_shading.py  uncertainty.py
src/modules/refl2prop/models/: model.pth  model_ood.pth
src/modules/refl2prop/refl2prop/: inference.py  train.py
src/modules/refocus/: __init__.py  config.py  processor.py
src/shared_utils/: __init__.py  assets.py  base_processor.py  config.py  constants.py  normalization.py  processors.py  project.py  pyproject.toml  sliding_window.py
src/shared_utils/data/: __init__.py  band.py  base.py  cloud_height.py  cloud_mask.py  refl2prop.py  sentinel.py
src/shared_utils/visualisation/: __init__.py  layers.py  loader.py  project_visualiser.py  static.py  viewer.py  viser_viewer.py  visualiser.py  web_viewer.py
src/shared_utils/visualisation/_deprecated/: __init__.py  viser_viewer.py
src/shared_utils/visualisation/templates/: viewer.html
src/shared_utils/workflows/recipes/: cloud-height-comparison.yaml  full-workflow.yaml
src/stats/: __init__.py  _generic.py  _utils.py  albedo.py  cloud_mask.py  cloud_properties.py
tests/: conftest.py  test_albedo_comparison.py  test_assets.py  test_band.py  test_cli.py  test_deprecated_viser.py  test_emulator.py  test_emulator_refactor.py  test_project.py  test_smoke.py  test_stats.py  test_visualisation.py  test_visualiser.py
