[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clouds-decoded"
version = "0.1.0"
description = "Clouds Decoded: End-to-end cloud properties from Sentinel-2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "rasterio",
    "pydantic>=2.0.0",
    "typer",
    "pandas",
    "pyarrow",
    "torch>=1.10.0",
    "xarray",
    "netCDF4",
    "scikit-image",
    "pyyaml",
    "scipy",
    "pyproj",
    "rtree",
    "tqdm",
    "matplotlib",
    "zarr",
    "platformdirs",
    "SEnSeIv2 @ git+https://github.com/aliFrancis/SEnSeIv2.git",
    "panel",
    "holoviews",
    "bokeh",
]

[tool.setuptools.package-dir]
"clouds_decoded" = "src/shared_utils"
"clouds_decoded.modules" = "src/modules"
"clouds_decoded.modules.cloud_mask" = "src/modules/cloud_mask"
"clouds_decoded.modules.cloud_height" = "src/modules/cloud_height"
"clouds_decoded.modules.albedo_estimator" = "src/modules/albedo_estimator"
"clouds_decoded.modules.albedo_estimator.datadriven" = "src/modules/albedo_estimator/datadriven"
"clouds_decoded.modules.refl2prop" = "src/modules/refl2prop"
"clouds_decoded.modules.refocus" = "src/modules/refocus"
"clouds_decoded.visualisation" = "src/shared_utils/visualisation"
"clouds_decoded.cli" = "src/cli"

[project.optional-dependencies]
sampling = ["cfgrib>=0.9.10"]

[project.scripts]
clouds-decoded = "clouds_decoded.cli.entry:app"
