[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clouds-decoded"
version = "0.1.0"
description = "Clouds Decoded: End-to-end cloud properties from Sentinel-2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "rasterio",
    "pydantic>=2.0.0",
    "typer",
    "pandas",
    "pyarrow",
    "torch>=1.10.0",
    "torchvision",
    "duckdb",
    "xarray",
    "netCDF4",
    "scikit-image",
    "pyyaml",
    "scipy",
    "pyproj",
    "rtree",
    "tqdm",
    "matplotlib",
    "platformdirs",
    "transformers>=4.30.0",
    "shapely>=2.0",
]

[tool.setuptools.package-dir]
"clouds_decoded" = "src/shared_utils"
"clouds_decoded.modules" = "src/modules"
"clouds_decoded.modules.cloud_mask" = "src/modules/cloud_mask"
"clouds_decoded.modules.cloud_height" = "src/modules/cloud_height"
"clouds_decoded.modules.cloud_height_emulator" = "src/modules/cloud_height_emulator"
"clouds_decoded.modules.albedo_estimator" = "src/modules/albedo_estimator"
"clouds_decoded.modules.albedo_estimator.datadriven" = "src/modules/albedo_estimator/datadriven"
"clouds_decoded.modules.refl2prop" = "src/modules/refl2prop"
"clouds_decoded.modules.refocus" = "src/modules/refocus"
"clouds_decoded.visualisation" = "src/shared_utils/visualisation"
"clouds_decoded.workflows" = "src/shared_utils/workflows"
"clouds_decoded.cli" = "src/cli"
"clouds_decoded.stats" = "src/stats"

[tool.setuptools.package-data]
"clouds_decoded.workflows" = ["recipes/*.yaml"]

[project.optional-dependencies]
viz = ["panel", "holoviews", "bokeh"]
sampling = ["cfgrib>=0.9.10"]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
clouds-decoded = "clouds_decoded.cli.entry:app"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselected by default; run with -m slow or --run-slow)",
]
addopts = "-m 'not slow'"
