[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clouds-decoded-core"
version = "0.1.0"
description = "Shared utilities and data models for Clouds Decoded"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "numpy",
    "rasterio",
    "pandas",
    "pyarrow",
]

[tool.hatch.build.targets.wheel.force-include]
"." = "clouds_decoded"
