[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clouds-decoded-albedo-estimator"
version = "0.1.0"
description = "Surface Albedo Estimation Module (Placeholder)"
requires-python = ">=3.10"
dependencies = [
    "clouds-decoded-core",
    "numpy",
    "rasterio"
]

[tool.hatch.build.targets.wheel.force-include]
"." = "clouds_decoded/modules/albedo_estimator"
