[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clouds-decoded-refl2prop"
version = "0.1.0"
description = "Cloud Properties from Reflectance (Inversion) Module"
requires-python = ">=3.10"
dependencies = [
    "clouds-decoded-core",
    "clouds-decoded-cloud-height",
    "torch",
    "numpy",
    "scikit-image",
    "rasterio",
    "netCDF4",
    "zarr"
]

[tool.hatch.build.targets.wheel.force-include]
"." = "clouds_decoded/modules/refl2prop"
